# ant-ray

./: .bazel_downloader.cfg  .bazelrc  .travis.yml  BUILD.bazel  README.md  RayVisualization.tsx  Robots.txt  WORKSPACE  app.py  build-docker-ant.sh  build.sh  buildtest.sh  demo.py  deploy.sh  deploy.yaml  design.md  design_doc.md  genindex.html  index.html  objects.inv  package-lock.json  py-modindex.html  robots.txt  run_aci_ut.sh  sitemap.xml  suppressions.asan  verify.html  versions.json
src/ray/metrics/: CMakeLists.txt  metrics_conf.cc  metrics_conf.h  metrics_conf_test.cc  metrics_group_interface.cc  metrics_group_interface.h  metrics_registry_interface.cc  metrics_registry_interface.h  metrics_reporter_interface.h  metrics_util.h  metrics_util_test.cc  perf_counter.cc  perf_counter.h  perf_counter_test.cc  tags.cc  tags.h
src/ray/metrics/group/: default_metrics_group.cc  default_metrics_group.h  metrics_group_interface.cc  metrics_group_interface.h
src/ray/metrics/registry/: empty_metrics_registry.h  metrics_registry_interface.cc  metrics_registry_interface.h  open_census_metrics_registry.cc  open_census_metrics_registry.h  prometheus_metrics_registry.cc  prometheus_metrics_registry.h  prometheus_metrics_registry_test.cc
src/ray/metrics/reporter/: empty_metrics_reporter.h  metrics_reporter_interface.h  prometheus_metrics_reporter.h  prometheus_push_reporter.cc  prometheus_push_reporter.h  prometheus_push_reporter_test.cc
src/ray/metrics/tag/: tags.cc  tags.h
streaming/java/: BUILD.bazel  dependencies.bzl  pom.xml  test.sh  testng.xml
streaming/java/streaming-api/: pom.xml  pom_template.xml
streaming/java/streaming-api/src/main/resources/: ray.conf
streaming/java/streaming-common/: pom.xml  pom_template.xml
streaming/java/streaming-common/src/test/resources/: log4j.properties  log4j2.xml
streaming/java/streaming-connectors/: pom.xml
streaming/java/streaming-connectors/streaming-kepler-connectors/: pom.xml
streaming/java/streaming-state/: pom.xml  pom_template.xml
streaming/src/: BUILD.bazel  data_reader.cc  data_reader.h  data_writer.cc  data_writer.h  event_service.cc  event_service.h  http_profiler.cc  http_profiler.h  reliability_helper.cc  reliability_helper.h  runtime_context.cc  runtime_context.h  streaming.cc  streaming.h  streaming_exported_symbols.lds  streaming_version_script.lds  wal.h
streaming/src/api/: collector.cc  collector.h  context.cc  context.h  function.cc  function.h  operator.cc  operator.h  record.cc  record.h  stream.cc  stream.h
streaming/src/buffer_pool/: buffer_pool.cc  buffer_pool.h
streaming/src/channel/: channel.cc  channel.h  factory.h
streaming/src/common/: buffer.h  status.h
streaming/src/conf/: streaming_config.cc  streaming_config.h
streaming/src/elasticbuffer/: elastic_buffer.cc  elastic_buffer.h
streaming/src/flow_control/: dynamic_step.cc  dynamic_step.h  flow_control.cc  flow_control.h
streaming/src/kmonitor/: streaming_kmonitor_extension.cc  test_kmonitor.py
streaming/src/lib/java/: com_alipay_streaming_runtime_memory_memorypool_jni_DirectMemory.cc  com_alipay_streaming_runtime_memory_memorypool_jni_DirectMemory.h  com_alipay_streaming_runtime_queue_QueueID.cc  com_alipay_streaming_runtime_queue_QueueID.h  com_alipay_streaming_runtime_queue_impl_streamingqueue_QueueConsumerImpl.cc  com_alipay_streaming_runtime_queue_impl_streamingqueue_QueueConsumerImpl.h  com_alipay_streaming_runtime_queue_impl_streamingqueue_QueueProducerImpl.cc  com_alipay_streaming_runtime_queue_impl_streamingqueue_QueueProducerImpl.h  streaming_jni_common.cc  streaming_jni_common.h
streaming/src/message/: message.cc  message.h  message_bundle.cc  message_bundle.h  priority_queue.h
streaming/src/metrics/: kmonitor_reporter.cc  kmonitor_reporter.h  stats_reporter.cc  stats_reporter.h  streaming_perf_metric.cc  streaming_perf_metric.h
streaming/src/protobuf/: streaming.proto
streaming/src/queue/: clear_env.sh  config.h  message.cc  message.h  queue.cc  queue.h  queue_handler.cc  queue_handler.h  queue_item.h  receiver.h  streaming_queue.fbs  transport.cc  transport.h  utils.h
streaming/src/reliability/: barrier_helper.cc  barrier_helper.h  persistence.cc  persistence.h
streaming/src/rescale/: rescale.h
streaming/src/runtime/: function_utils.cc  function_utils.h  graph.cc  graph.h  task.cc  task.h  worker.cc  worker.h  worker_main.cc
streaming/src/test/: async_wal_tests.cc  barrier_helper_tests.cc  buffer_pool_tests.cc  bundle_meta_info.cc  collocate_plasma_tests.cc  config_parser_test.cc  cyclic_tests.cc  data_reader_tests.cc  data_writer_tests.cc  direct_call_workers.cc  dummy_test_for_build_only.cc  elastic_buffer_tests.cc  event_service_tests.cc  function_test.h  graph_test.cc  http_profiler_tests.cc  kill_all.sh  message_serialization_tests.cc  mock_reader.h  mock_transfer_tests.cc  mock_writer.h  operator_tests.cc  persistence_tests.cc  queue_tests_base.h  reliability_helper_tests.cc  run_tests.sh  runtime_task_tests.cc  streaming_asio_tests.cc  streaming_barrier_merge_tests.cc  streaming_dynamic_step_tests.cc  streaming_elastic_buffer_tests.cc  streaming_exactly_same_tests.cc  streaming_log_tests.cc  streaming_message_ring_buffer_tests.cc  streaming_perf_tests.cc  streaming_queue_fo_tests.cc  streaming_queue_message_tests.cc  streaming_queue_mock_tests.cc  streaming_queue_perf_tests.cc  streaming_queue_tests.cc  (+7 more)
streaming/src/test/example/: function_lib_example.cc  function_lib_example.h
streaming/src/test/it/: streaming_exactly_same_writer_tests.cc  streaming_exactly_same_writer_tests.h  streaming_queue_tests.cc  streaming_queue_tests.h  streaming_rescale_writer_tests.cc  streaming_rescale_writer_tests.h  streaming_test_suite.cc  streaming_test_suite.h  streaming_writer_tests.cc  streaming_writer_tests.h
streaming/src/test/perf/: client.cc  server.cc  sync_client.cc  sync_server.cc  test_asio_latency.cc
streaming/src/util/: config.cc  config.h  logging.cc  logging.h  ring_buffer.h  streaming_asio.cc  streaming_asio.h  streaming_memory_pool.cc  streaming_memory_pool.h  utility.cc  utility.h
(+50715 files in other folders)
